# ChangeLog for dev-libs/libxslt
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.181 2008/05/20 19:03:19 jer Exp $

  20 May 2008; Christian Faulhammer <opfer@gentoo.org>
  libxslt-1.1.24.ebuild:
  stable x86

  20 May 2008; Jose Luis Rivero <yoswink@gentoo.org> libxslt-1.1.24.ebuild:
  Stable on alpha wrt security bug #222499

  20 May 2008; Jeroen Roovers <jer@gentoo.org> libxslt-1.1.24.ebuild:
  Stable for HPPA (bug #222499).

  20 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  libxslt-1.1.24.ebuild:
  ppc stable, bug #222499

  20 May 2008; Ferris McCormick <fmccor@gentoo.org> libxslt-1.1.24.ebuild:
  Sparc stable --- Bug #222499 --- test suite runs successfully.

*libxslt-1.1.24 (19 May 2008)

  19 May 2008; Daniel Gryniewicz <dang@gentoo.org> +libxslt-1.1.24.ebuild:
  Bump to 1.1.24

  - Documentation: man page fix (Vincent Lefevre).

  - Bug fixes: pattern bug fix, key initialization problems, exclusion of

  unknown namespaced element on top of stylesheets, python generator

  syntactic cleanup (Martin)

*libxslt-1.1.23 (20 Apr 2008)

  20 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/libxslt-1.1.23-parallel-install.patch, -libxslt-1.1.20.ebuild,
  -libxslt-1.1.20-r1.ebuild, +libxslt-1.1.23.ebuild:
  bump to 1.1.23. Bug and build fixes. Fix bug #212784.

  25 Mar 2008; <ricmm@gentoo.org> libxslt-1.1.20.ebuild,
  libxslt-1.1.20-r1.ebuild, libxslt-1.1.22.ebuild:
  Drop to ~mips due to unstable deps

  28 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> libxslt-1.1.22.ebuild:
  add examples flag, bug #111508

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org> libxslt-1.1.22.ebuild:
  Stable for HPPA (bug #199322).

  20 Nov 2007; Markus Rothe <corsair@gentoo.org> libxslt-1.1.22.ebuild:
  Stable on ppc64; bug #199322

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> libxslt-1.1.22.ebuild:
  Stable on mips, per #199322.
