@@ -1,13 +1,23 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.181 2008/05/20 19:03:19 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.185 2008/05/22 22:46:12 eva Exp $
+
+  22 May 2008; Gilles Dartiguelongue <eva@gentoo.org> libxslt-1.1.24.ebuild:
+  Fix broken <python-2.5 site-packages detection, see bug #86756 and bug
+  #218643.
+
+  22 May 2008; Raúl Porcel <armin76@gentoo.org> libxslt-1.1.24.ebuild:
+  ia64 stable wrt #222499
+
+  21 May 2008; Markus Rothe <corsair@gentoo.org> libxslt-1.1.24.ebuild:
+  Stable on ppc64
 
   20 May 2008; Christian Faulhammer <opfer@gentoo.org>
   libxslt-1.1.24.ebuild:
   stable x86
 
   20 May 2008; Jose Luis Rivero <yoswink@gentoo.org> libxslt-1.1.24.ebuild:
-  Stable on alpha wrt security bug #222499
+  Stable on alpha bug #222499
 
   20 May 2008; Jeroen Roovers <jer@gentoo.org> libxslt-1.1.24.ebuild:
   Stable for HPPA (bug #222499).
